# manga-ocr-torchless

./: README.md  pyproject.toml
.github/workflows/: publish.yml
manga_ocr/: __init__.py  __main__.py  cli.py  ocr.py
tests/: test_ocr.py
tests/original_tests/: expected_results.json
