[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-ocr-torchless"
version = "0.1.0"
authors = [
  { name="Lixen Reyes", email="liksunrice@gmail.com" },
]
description = "Torchless optical character recognition for manga focused Japanese text, lightweight version of kha-white's manga-ocr"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
license = "Apache-2.0"
keywords = ["ocr", "manga", "japanese", "onnx", "torchless"]
dependencies = [
    "onnxruntime>=1.16.0",
    "Pillow>=9.0.0",
    "transformers>=4.30.0",
    "huggingface_hub>=0.14.0",
    "numpy>=1.21.0",
    "pyperclip>=1.8.2",
    "watchdog>=3.0.0",
    "jaconv>=0.3.4",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8"
]

[project.urls]
Homepage = "https://github.com/liksunrice/manga-ocr-torchless"
"Original Repository" = "https://github.com/kha-white/manga-ocr"

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
manga_ocr = "manga_ocr.__main__:main"
